--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
  <section>
    <div>
-    <img src="A1-michaelwalker.github.io/ideal_job.jpeg" alt="profile picture" style="width:100%">
+    <img src="ideal_job.jpeg" alt="profile picture" style="width:100%">
    <div>
    <div class="">
     <h1><strong>MICHAEL<strong> WALKER</h1>
