--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Start Theme</title>
+    <title>Assignment 1 Week 3</title>
     <!-- Core theme CSS just for laughs. Lets see if it gets used -->
     <link href="css/styles.css" rel="stylesheet" />
 </head>
