--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
  <div class="row">
    <div class="column left">
     <div>
-     <img src="assets/profile.jpg" alt="profile picture" style="width:100%">
+     <img src="profile.jpg" alt="profile picture" style="width:100%">
     </div>
     <div>
     <h1>MICHAEL WALKER</h1>
@@ -85,7 +85,7 @@
                <div class="flex-grow-1">
                  <h3>Big 5 Personality</h3>
                  <div>
-                   <a href="assets/big5/truitybigfivereport.pdf">Openness</a>
+                   <a href="big5/truitybigfivereport.pdf">Openness</a>
                  </div>
                    <p>Demonstrating to be higher than average in Openness, Conscientiousness and Agreeableness but lower than average in Extraversion and extremely low in Neuroticism.
                    <br>Good at establishing and maintaining relationships with a smaller, supportive, interesting, and diverse circle of people. High degree of independence and initiative, and highly capable of quiet, focused thought means that ideas to overcome problems can be novel and creative.
