--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
  <div class="row">
    <div class="column left">
     <div>
-     <img src="profile.jpg" alt="profile picture" style="width:100%">
+     <img src="profile.JPG" alt="profile picture" style="width:100%">
     </div>
     <div>
     <h1>MICHAEL WALKER</h1>
