--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
 <section>
  <div class="row">
-   <div class="column left">
+   <div class="column left" style="background-color:#ff5200;">
     <div>
      <img src="profile.JPG" alt="profile picture" style="width:100%">
     </div>
