--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 .column {
   float: left;
   padding: 10px;
-  height: 300px;
 }
 
 .left {
@@ -48,6 +47,7 @@
   </div>
   <div class="column right">
     <div class="flex-grow-1">
+     <h2>Introduction</h2>   
      <p>Hello everyone!
      <br>My name is Michael Walker, 28 years old, with a lovely wife and four children. I am a qualified electrician and have been working in the elevator industry for about 7 years in various roles (Technical, sales, site management), but the goal is to fully transition into IT within ten years for a variety of reasons including a heavy interest in all things "computer". When the time is available, I enjoy being with my growing family, visiting places with friends here in Brisbane Queensland, or working on never-ending home improvement projects.</p>
      <p>Although I was born in Western Australia and now live in Queensland, you would think I was a Kiwi due to my accent (English speaking only sorry). This is because my family and I lived in a small town called Kawerau in the Bay Of Plenty, New Zealand for fifteen years. It was a lovely little town that kept cleaning up awards for "the most beautiful town" competition to the point that the compitition was eventually cancelled. It did have a dark side to it due to the heavy gang presence (Mongrel Mob, Black Power, Tribesmen etc) and this meant that a street-smart awarness was instilled into me from an early age.</p>
