--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
 <section>
  <div class="row">
-   <div class="column left" style="background-color:#ff5200;">
+   <div class="column left" style="background-color:#ff5200;" class="full-height">
     <div>
      <img src="profile.JPG" alt="profile picture" style="width:100%">
     </div>
