--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h1>MICHAEL WALKER</h1>
     </div>
   </div>
-  <div class="column right">
+  <div class="column right" style="background-color:white; padding:20px; font-size: 25px; overflow-y:scroll;">
     <div class="flex-grow-1">
      <h2>Introduction</h2>   
      <p>Hello everyone!
