--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
     </div>
     <div>
     <h1>MICHAEL WALKER</h1>
+        <ul>
+          <li>CABOOLTURE, QLD 4510</li>
+          <li>USI - DMFN8A4X3L</li>
+          <li>EMAIL - S3917030@STUDENT.RMIT.EDU.AU</li>
+          <li>(+61) 411-305-883</li>
+        </ul>
     </div>
   </div>
   <div class="column right" style="background-color:white; padding:20px; font-size: 25px; overflow-y:scroll;">
