--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <ul>
           <li>CABOOLTURE, QLD 4510</li>
           <li>USI - DMFN8A4X3L</li>
-          <li>EMAIL - S3917030@STUDENT.RMIT.EDU.AU</li>
+          <li>EMAIL - S3917030@student.rmit.edu.au</li>
           <li>(+61) 411-305-883</li>
         </ul>
     </div>
