--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Personal Profile</title>
     <style>
     h1 {text-align: center;}
+    h2 {text-align: center;}
     * {
   box-sizing: border-box;
 }
